<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutcrearhijo"
    tools:context=".CrearHijo">

    <EditText
        android:id="@+id/txt_pesogigas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/apppeso_input"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <EditText
        android:id="@+id/txt_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/appversion_input"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/txt_pesogigas"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_pesogigas"
        app:layout_constraintTop_toBottomOf="@+id/txt_pesogigas" />

    <EditText
        android:id="@+id/txt_nombreapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/appnombre_input"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txt_version"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_version"
        app:layout_constraintTop_toBottomOf="@+id/txt_version" />

    <EditText
        android:id="@+id/txt_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/appurl_input"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txt_nombreapp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txt_nombreapp"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombreapp" />

    <EditText
        android:id="@+id/txt_fechalan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/appfecha_input"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/txt_url"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_url"
        app:layout_constraintTop_toBottomOf="@+id/txt_url" />

    <EditText
        android:id="@+id/txt_costoapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/appcosto_input"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/txt_fechalan"
        app:layout_constraintStart_toStartOf="@+id/txt_fechalan"
        app:layout_constraintTop_toBottomOf="@+id/txt_fechalan" />

    <Button
        android:id="@+id/btn_guardarhijo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_guardardatos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_costoapp" />
</android.support.constraint.ConstraintLayout>